# SafeRoute

./: .env.template  .gitignore  .pre-commit-config.yaml  INSTALL.md  Makefile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
.github/workflows/: compliance.yml
api/: exceptions.py
app/: database.py  main.py  pyproject.toml  settings.py
app/api/: route_chat_completion_middleware.py  route_metrics.py
app/dependencies/: auth.py
app/models/: __init__.py  audit_log.py
app/schemas/: __init__.py  chatMessage.py
benchmarks/: ACCURACY_REPORT.md  pii_corpus.py  test_pii_accuracy.py
design_docs/: grafana.md  litellm.md  logging.md  prometheus.md  vicroads_guardrails.md
grafana/dashboards/: saferoute.json
grafana/provisioning/dashboards/: dashboard.yml
scripts/: find_ports.sh
tests/: E2E_test.md  TESTING_STRATEGY.md  test_auditor.py  test_pii_guarantee.py  test_redactor.py
vicroads_guardrails/: __init__.py  auditor.py  logger.py  patterns.py  redactor.py
