[project]
name = "lightllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "litellm>=1.88.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "spacy>=3.8.14",
    "uvicorn>=0.49.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "pre-commit>=4.6.0",
    "prometheus-client>=0.25.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["vicroads_guardrails", "app"]
omit = ["*/migrations/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
