[project]
name = "lightllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "litellm>=1.88.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "spacy>=3.8.14",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
